@@ -825,6 +825,10 @@ void BaseGui::createActions() {
 	connect( showPreferencesAct, SIGNAL(triggered()),
              this, SLOT(showPreferencesDialog()) );
 
+	showTubeBrowserAct = new MyAction( this, "show_tube_browser" );
+	connect( showTubeBrowserAct, SIGNAL(triggered()),
+             this, SLOT(showTubeBrowser()) );
+
 	// Submenu Logs
 	showLogMplayerAct = new MyAction( QKeySequence("Ctrl+M"), this, "show_mplayer_log" );
 	connect( showLogMplayerAct, SIGNAL(triggered()),
@@ -1626,6 +1630,7 @@ void BaseGui::retranslateStrings() {
 	showPlaylistAct->change( Images::icon("playlist"), tr("&Playlist") );
 	showPropertiesAct->change( Images::icon("info"), tr("View &info and properties...") );
 	showPreferencesAct->change( Images::icon("prefs"), tr("P&references") );
+	showTubeBrowserAct->change( Images::icon("tubebrowser"), tr("&YouTube browser") );
 
 	// Submenu Logs
 	showLogMplayerAct->change( "MPlayer" );
@@ -2482,6 +2487,19 @@ void BaseGui::createMenus() {
 	// OPTIONS MENU
 	optionsMenu->addAction(showPropertiesAct);
 	optionsMenu->addAction(showPlaylistAct);
+	// Check if the smplayer youtube browser is installed
+	{
+		QString tube_exec = Paths::appPath() + "/smtube";
+		#ifdef Q_OS_WIN
+		tube_exec += ".exe";
+		#endif
+		if (QFile::exists(tube_exec)) {
+			optionsMenu->addAction(showTubeBrowserAct);
+			qDebug("BaseGui::createMenus: %s does exist", tube_exec.toUtf8().constData());
+		} else {
+			qDebug("BaseGui::createMenus: %s does not exist", tube_exec.toUtf8().constData());
+		}
+	}
 
 	// OSD submenu
 	osd_menu = new QMenu(this);
@@ -4698,6 +4716,13 @@ void BaseGui::showVideoPreviewDialog() {
 	if ( (video_preview->showConfigDialog(this)) && (video_preview->createThumbnails()) ) {
 		video_preview->show();
 		video_preview->adjustWindowSize();
+	}
+}
+
+void BaseGui::showTubeBrowser() {
+	qDebug("BaseGui::showTubeBrowser");
+	if (!QProcess::startDetached("smtube", QStringList())) {
+		QMessageBox::warning(this, tr("An error happened - SMPlayer"), tr("The YouTube Browser couldn't be launched"));
 	}
 }
 
